<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="16dp">


        <!--<android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/IBM_blue"
            android:orientation="horizontal"
            android:padding="40px">

            <!--<TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/IBM_blue"
                android:paddingTop="70px"
                android:paddingBottom="40px"
                android:text="@string/axarco"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="80px" />-->


            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="90px"
                android:layout_height="90px"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/menu" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center|center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo" />

            <ImageView
                android:id="@+id/carrito"
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_gravity="end|center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/carrito" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="592dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="83dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@string/Los_Romanes"
                        android:textAlignment="left"
                        android:textColor="@color/gris"
                        android:textSize="50px" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@string/Anita"
                        android:textAlignment="left"
                        android:textColor="@color/gris"
                        android:textSize="50px" />

                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="287dp"
                app:srcCompat="@drawable/aceite" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/Precio_Los_Romanes"
                android:textAlignment="left"
                android:textColor="@color/gris"
                android:textSize="50px" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/Cantidad_Los_Romanes"
                android:textAlignment="left"
                android:textColor="@color/gris"
                android:textSize="50px" />

            <Button
                android:id="@+id/button"
                android:layout_width="176dp"
                android:layout_height="94dp"
                android:layout_gravity="right"
                android:text="@string/Carrito" />


        </LinearLayout>


        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>